tests/dataset/job/compiler/c/q16.error
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c: In function ‘test_Q16_finds_series_named_after_a_character_between_episodes_50_and_99’:
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:328:23: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  328 |           .len != tmp1.len) {
      |                       ^
      |                       ->
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:338:32: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  338 |               .data[i3] != tmp1.data[i3]) {
      |                                ^
      |                                ->
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:380:27: warning: implicit declaration of function ‘rows_item_list_t_create’ [-Wimplicit-function-declaration]
  380 |   rows_item_list_t tmp4 = rows_item_list_t_create(
      |                           ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:381:15: error: ‘(aka_name_t *)&aka_name’ is a pointer; did you mean to use ‘->’?
  381 |       aka_name.len * name.len * cast_info.len * title.len * movie_keyword.len *
      |               ^
      |               ->
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:381:26: error: ‘(name_t *)&name’ is a pointer; did you mean to use ‘->’?
  381 |       aka_name.len * name.len * cast_info.len * title.len * movie_keyword.len *
      |                          ^
      |                          ->
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:381:42: error: ‘(cast_info_t *)&cast_info’ is a pointer; did you mean to use ‘->’?
  381 |       aka_name.len * name.len * cast_info.len * title.len * movie_keyword.len *
      |                                          ^
      |                                          ->
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:381:54: error: ‘(title_t *)&title’ is a pointer; did you mean to use ‘->’?
  381 |       aka_name.len * name.len * cast_info.len * title.len * movie_keyword.len *
      |                                                      ^
      |                                                      ->
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:381:74: error: ‘(movie_keyword_t *)&movie_keyword’ is a pointer; did you mean to use ‘->’?
  381 |       aka_name.len * name.len * cast_info.len * title.len * movie_keyword.len *
      |                                                                          ^
      |                                                                          ->
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:382:14: error: ‘(keyword_t *)&keyword’ is a pointer; did you mean to use ‘->’?
  382 |       keyword.len * movie_companies.len * company_name.len);
      |              ^
      |              ->
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:382:36: error: ‘(movie_companie_t *)&movie_companies’ is a pointer; did you mean to use ‘->’?
  382 |       keyword.len * movie_companies.len * company_name.len);
      |                                    ^
      |                                    ->
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:382:55: error: ‘(company_name_t *)&company_name’ is a pointer; did you mean to use ‘->’?
  382 |       keyword.len * movie_companies.len * company_name.len);
      |                                                       ^
      |                                                       ->
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:439:15: warning: implicit declaration of function ‘int_create’; did you mean ‘list_int_create’? [-Wimplicit-function-declaration]
  439 |   int tmp14 = int_create(rows.len);
      |               ^~~~~~~~~~
      |               list_int_create
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:443:10: error: request for member ‘data’ in something not a structure or union
  443 |     tmp14.data[tmp15] = r.pseudonym;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:446:8: error: request for member ‘len’ in something not a structure or union
  446 |   tmp14.len = tmp15;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:451:10: error: request for member ‘data’ in something not a structure or union
  451 |     tmp17.data[tmp18] = r.series;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:454:8: error: request for member ‘len’ in something not a structure or union
  454 |   tmp17.len = tmp18;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:456:54: error: incompatible type for argument 1 of ‘_min_string’
  456 |       (result_t){.cool_actor_pseudonym = _min_string(tmp14),
      |                                                      ^~~~~
      |                                                      |
      |                                                      int
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:457:57: error: incompatible type for argument 1 of ‘_min_string’
  457 |                  .series_named_after_char = _min_string(tmp17)}};
      |                                                         ^~~~~
      |                                                         |
      |                                                         int
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:467:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  467 |     _json_string(it.cool_actor_pseudonym);
      |                  ~~^~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:73:32: note: expected ‘char *’ but argument is of type ‘const char *’
   73 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:471:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  471 |     _json_string(it.series_named_after_char);
      |                  ~~^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:73:32: note: expected ‘char *’ but argument is of type ‘const char *’
   73 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:476:7: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  476 |       result;
      |       ^~~~~~
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:478:13: error: request for member ‘data’ in something not a structure or union
  478 |   free(tmp14.data);
      |             ^
/tmp/TestCCompiler_JOB_Goldenq16555468053/001/prog.c:479:13: error: request for member ‘data’ in something not a structure or union
  479 |   free(tmp17.data);
      |             ^
